ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'true'", "'false'", "'='", "';'", "'if'", "'else'", 
                     "'while'", "'do'", "'break'", "'||'", "'&&'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'int'", 
                     "'float'" ]

    symbolicNames = [ "<INVALID>", "T_FLOAT", "T_INT", "T_PLUS", "T_MINUS", 
                      "T_MULTIPLY", "T_DIVIDE", "P_LEFT", "P_RIGHT", "LL_LEFT", 
                      "LL_RIGHT", "C_LEFT", "C_RIGHT", "T_TRUE", "T_FALSE", 
                      "T_ASIGN", "T_ENDL", "T_IF", "T_ELSE", "T_WHILE", 
                      "T_DO", "T_BREAK", "T_OR", "T_AND", "T_IGUAL", "T_DIF", 
                      "T_MENOR", "T_MAYOR", "T_MENORIGUAL", "T_MAYORIGUAL", 
                      "T_NEG", "T_BASICO_A", "T_BASICO_B", "T_ID", "WS" ]

    RULE_programa = 0
    RULE_bloque = 1
    RULE_decls = 2
    RULE_decl = 3
    RULE_tipo = 4
    RULE_instrs = 5
    RULE_instr = 6
    RULE_loc = 7
    RULE_bool = 8
    RULE_comb = 9
    RULE_igualdad = 10
    RULE_rel = 11
    RULE_expr = 12
    RULE_term = 13
    RULE_unario = 14
    RULE_factor = 15

    ruleNames =  [ "programa", "bloque", "decls", "decl", "tipo", "instrs", 
                   "instr", "loc", "bool", "comb", "igualdad", "rel", "expr", 
                   "term", "unario", "factor" ]

    EOF = Token.EOF
    T_FLOAT=1
    T_INT=2
    T_PLUS=3
    T_MINUS=4
    T_MULTIPLY=5
    T_DIVIDE=6
    P_LEFT=7
    P_RIGHT=8
    LL_LEFT=9
    LL_RIGHT=10
    C_LEFT=11
    C_RIGHT=12
    T_TRUE=13
    T_FALSE=14
    T_ASIGN=15
    T_ENDL=16
    T_IF=17
    T_ELSE=18
    T_WHILE=19
    T_DO=20
    T_BREAK=21
    T_OR=22
    T_AND=23
    T_IGUAL=24
    T_DIF=25
    T_MENOR=26
    T_MAYOR=27
    T_MENORIGUAL=28
    T_MAYORIGUAL=29
    T_NEG=30
    T_BASICO_A=31
    T_BASICO_B=32
    T_ID=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(ExprParser.BloqueContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = ExprParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LL_LEFT(self):
            return self.getToken(ExprParser.LL_LEFT, 0)

        def decls(self):
            return self.getTypedRuleContext(ExprParser.DeclsContext,0)


        def instrs(self):
            return self.getTypedRuleContext(ExprParser.InstrsContext,0)


        def LL_RIGHT(self):
            return self.getToken(ExprParser.LL_RIGHT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = ExprParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(ExprParser.LL_LEFT)
            self.state = 35
            self.decls(0)
            self.state = 36
            self.instrs(0)
            self.state = 37
            self.match(ExprParser.LL_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(ExprParser.DeclsContext,0)


        def decl(self):
            return self.getTypedRuleContext(ExprParser.DeclContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)



    def decls(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.DeclsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_decls, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 44
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.DeclsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_decls)
                    self.state = 40
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 41
                    self.decl() 
                self.state = 46
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ExprParser.TipoContext,0)


        def T_ID(self):
            return self.getToken(ExprParser.T_ID, 0)

        def T_ENDL(self):
            return self.getToken(ExprParser.T_ENDL, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = ExprParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.tipo(0)
            self.state = 48
            self.match(ExprParser.T_ID)
            self.state = 49
            self.match(ExprParser.T_ENDL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_BASICO_A(self):
            return self.getToken(ExprParser.T_BASICO_A, 0)

        def T_BASICO_B(self):
            return self.getToken(ExprParser.T_BASICO_B, 0)

        def tipo(self):
            return self.getTypedRuleContext(ExprParser.TipoContext,0)


        def C_LEFT(self):
            return self.getToken(ExprParser.C_LEFT, 0)

        def T_INT(self):
            return self.getToken(ExprParser.T_INT, 0)

        def C_RIGHT(self):
            return self.getToken(ExprParser.C_RIGHT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)



    def tipo(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.TipoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_tipo, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.state = 52
                self.match(ExprParser.T_BASICO_A)
                pass
            elif token in [32]:
                self.state = 53
                self.match(ExprParser.T_BASICO_B)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.TipoContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_tipo)
                    self.state = 56
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 57
                    self.match(ExprParser.C_LEFT)
                    self.state = 58
                    self.match(ExprParser.T_INT)
                    self.state = 59
                    self.match(ExprParser.C_RIGHT) 
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class InstrsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrs(self):
            return self.getTypedRuleContext(ExprParser.InstrsContext,0)


        def instr(self):
            return self.getTypedRuleContext(ExprParser.InstrContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_instrs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrs" ):
                listener.enterInstrs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrs" ):
                listener.exitInstrs(self)



    def instrs(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.InstrsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_instrs, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.InstrsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_instrs)
                    self.state = 66
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 67
                    self.instr() 
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loc(self):
            return self.getTypedRuleContext(ExprParser.LocContext,0)


        def T_ASIGN(self):
            return self.getToken(ExprParser.T_ASIGN, 0)

        def bool_(self):
            return self.getTypedRuleContext(ExprParser.BoolContext,0)


        def T_ENDL(self):
            return self.getToken(ExprParser.T_ENDL, 0)

        def T_IF(self):
            return self.getToken(ExprParser.T_IF, 0)

        def P_LEFT(self):
            return self.getToken(ExprParser.P_LEFT, 0)

        def P_RIGHT(self):
            return self.getToken(ExprParser.P_RIGHT, 0)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.InstrContext)
            else:
                return self.getTypedRuleContext(ExprParser.InstrContext,i)


        def T_ELSE(self):
            return self.getToken(ExprParser.T_ELSE, 0)

        def T_WHILE(self):
            return self.getToken(ExprParser.T_WHILE, 0)

        def T_DO(self):
            return self.getToken(ExprParser.T_DO, 0)

        def T_BREAK(self):
            return self.getToken(ExprParser.T_BREAK, 0)

        def bloque(self):
            return self.getTypedRuleContext(ExprParser.BloqueContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)




    def instr(self):

        localctx = ExprParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_instr)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.loc(0)
                self.state = 74
                self.match(ExprParser.T_ASIGN)
                self.state = 75
                self.bool_(0)
                self.state = 76
                self.match(ExprParser.T_ENDL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(ExprParser.T_IF)
                self.state = 79
                self.match(ExprParser.P_LEFT)
                self.state = 80
                self.bool_(0)
                self.state = 81
                self.match(ExprParser.P_RIGHT)
                self.state = 82
                self.instr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(ExprParser.T_IF)
                self.state = 85
                self.match(ExprParser.P_LEFT)
                self.state = 86
                self.bool_(0)
                self.state = 87
                self.match(ExprParser.P_RIGHT)
                self.state = 88
                self.instr()
                self.state = 89
                self.match(ExprParser.T_ELSE)
                self.state = 90
                self.instr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.match(ExprParser.T_WHILE)
                self.state = 93
                self.match(ExprParser.P_LEFT)
                self.state = 94
                self.bool_(0)
                self.state = 95
                self.match(ExprParser.P_RIGHT)
                self.state = 96
                self.instr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.match(ExprParser.T_DO)
                self.state = 99
                self.instr()
                self.state = 100
                self.match(ExprParser.T_WHILE)
                self.state = 101
                self.match(ExprParser.P_LEFT)
                self.state = 102
                self.bool_(0)
                self.state = 103
                self.match(ExprParser.P_RIGHT)
                self.state = 104
                self.match(ExprParser.T_ENDL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.match(ExprParser.T_BREAK)
                self.state = 107
                self.match(ExprParser.T_ENDL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_ID(self):
            return self.getToken(ExprParser.T_ID, 0)

        def loc(self):
            return self.getTypedRuleContext(ExprParser.LocContext,0)


        def C_LEFT(self):
            return self.getToken(ExprParser.C_LEFT, 0)

        def bool_(self):
            return self.getTypedRuleContext(ExprParser.BoolContext,0)


        def C_RIGHT(self):
            return self.getToken(ExprParser.C_RIGHT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_loc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoc" ):
                listener.enterLoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoc" ):
                listener.exitLoc(self)



    def loc(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.LocContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_loc, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ExprParser.T_ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.LocContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_loc)
                    self.state = 114
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 115
                    self.match(ExprParser.C_LEFT)
                    self.state = 116
                    self.bool_(0)
                    self.state = 117
                    self.match(ExprParser.C_RIGHT) 
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comb(self):
            return self.getTypedRuleContext(ExprParser.CombContext,0)


        def bool_(self):
            return self.getTypedRuleContext(ExprParser.BoolContext,0)


        def T_OR(self):
            return self.getToken(ExprParser.T_OR, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)



    def bool_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.BoolContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_bool, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.comb(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.BoolContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_bool)
                    self.state = 127
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 128
                    self.match(ExprParser.T_OR)
                    self.state = 129
                    self.comb(0) 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CombContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def igualdad(self):
            return self.getTypedRuleContext(ExprParser.IgualdadContext,0)


        def comb(self):
            return self.getTypedRuleContext(ExprParser.CombContext,0)


        def T_AND(self):
            return self.getToken(ExprParser.T_AND, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_comb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComb" ):
                listener.enterComb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComb" ):
                listener.exitComb(self)



    def comb(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.CombContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_comb, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.igualdad(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 143
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.CombContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_comb)
                    self.state = 138
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 139
                    self.match(ExprParser.T_AND)
                    self.state = 140
                    self.igualdad(0) 
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IgualdadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rel(self):
            return self.getTypedRuleContext(ExprParser.RelContext,0)


        def igualdad(self):
            return self.getTypedRuleContext(ExprParser.IgualdadContext,0)


        def T_IGUAL(self):
            return self.getToken(ExprParser.T_IGUAL, 0)

        def T_DIF(self):
            return self.getToken(ExprParser.T_DIF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_igualdad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgualdad" ):
                listener.enterIgualdad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgualdad" ):
                listener.exitIgualdad(self)



    def igualdad(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.IgualdadContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_igualdad, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.rel()
            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 155
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.IgualdadContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_igualdad)
                        self.state = 149
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 150
                        self.match(ExprParser.T_IGUAL)
                        self.state = 151
                        self.rel()
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.IgualdadContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_igualdad)
                        self.state = 152
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 153
                        self.match(ExprParser.T_DIF)
                        self.state = 154
                        self.rel()
                        pass

             
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def T_MENOR(self):
            return self.getToken(ExprParser.T_MENOR, 0)

        def T_MENORIGUAL(self):
            return self.getToken(ExprParser.T_MENORIGUAL, 0)

        def T_MAYORIGUAL(self):
            return self.getToken(ExprParser.T_MAYORIGUAL, 0)

        def T_MAYOR(self):
            return self.getToken(ExprParser.T_MAYOR, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRel" ):
                listener.enterRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRel" ):
                listener.exitRel(self)




    def rel(self):

        localctx = ExprParser.RelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rel)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.expr(0)
                self.state = 161
                self.match(ExprParser.T_MENOR)
                self.state = 162
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.expr(0)
                self.state = 165
